force-app/main/default/objects/Opportunity_Competitor__c/fields/Competitive_Position__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Position__c</fullName>
    <description>pick list describing Iron Mountain’s relationship with the customer</description>
    <inlineHelpText>select the value that best describes Iron Mountain’s relationship with the customer for this opportunity</inlineHelpText>
    <label>Competitive Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incumbent</fullName>
            </value>
            <value>
                <fullName>Partially Vended</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>