force-app/main/default/objects/Opportunity_Competitor__c/fields/Expiration_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Notification_Date__c</fullName>
    <description>Date the prospect has to notify the vendor of non-renewal so that the contract does not auto-renew.</description>
    <inlineHelpText>Date the prospect has to notify the vendor of non-renewal so that the contract does not auto-renew.</inlineHelpText>
    <label>Expiration Notification Date</label>
    <type>Date</type>
</CustomField>