force-app/main/default/objects/Opportunity_Competitor__c/fields/Minimum_Storage_Charge__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Storage_Charge__c</fullName>
    <label>Minimum Storage Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>