force-app/main/default/objects/Opportunity_Competitor__c/fields/Retrieval_Box__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Box__c</fullName>
    <label>Retrieval Box</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>