force-app/main/default/objects/Opportunity_Competitor__c/fields/Retrieval_File__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_File__c</fullName>
    <label>Retrieval File</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>