force-app/main/default/objects/Opportunity_Competitor__c/fields/Rush_Transport__c.field-meta.xml
<CustomField>
    <fullName>Rush_Transport__c</fullName>
    <label>Rush Transport</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>