force-app/main/default/objects/Opportunity_Competitor__c/fields/Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Status_Notes__c</fullName>
    <description>brief notes on actions taken</description>
    <inlineHelpText>add brief notes on current status and actions taken- limited to 255 characters</inlineHelpText>
    <label>Status Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>