force-app/main/default/objects/Opportunity_Competitor__c/fields/War_Room__c.field-meta.xml
<CustomField>
    <fullName>War_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <description>opportunities tagged for executive strategic review</description>
    <inlineHelpText>opportunities tagged for executive strategic review</inlineHelpText>
    <label>War Room</label>
    <type>Checkbox</type>
</CustomField>